<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/rl_music_play_bottom"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@color/gray_f5">

    <RelativeLayout
        android:layout_above="@+id/pb_music_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_music_icon"
            android:layout_width="@dimen/music_play_bottom_height"
            android:layout_height="@dimen/music_play_bottom_height"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:scaleType="fitXY"
            android:src="@drawable/img_default"
            android:transitionName="@string/start_anim_icon"/>

        <ImageView
            android:id="@+id/tv_music_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/tv_music_play_next"
            android:src="@drawable/mv_btn_play_prs"
            android:transitionName="@string/start_anim_play"/>

        <ImageView
            android:id="@+id/tv_music_play_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/default_padding"
            android:padding="@dimen/default_padding"
            android:src="@drawable/note_btn_next_white"/>

        <ImageView
            android:id="@+id/iv_music_play_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/tv_music_play"
            android:padding="@dimen/default_padding"
            android:src="@drawable/list_icn_move"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/default_padding"
            android:layout_marginRight="@dimen/default_padding"
            android:layout_toLeftOf="@+id/iv_music_play_options"
            android:layout_toRightOf="@+id/iv_music_icon"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_music_item_title"
                style="@style/MusicItemTitleText"
                android:text="@string/app_name"
                android:transitionName="@string/start_anim_title"/>

            <TextView
                android:id="@+id/tv_music_item_singer"
                style="@style/MusicItemTitleSinger"
                android:layout_marginTop="@dimen/music_item_margin"
                android:text="@string/app_name"
                android:transitionName="@string/start_anim_singer"/>

        </LinearLayout>
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/pb_music_progress"
        style="@android:style/Widget.Holo.ProgressBar.Horizontal"
        android:progressDrawable="@drawable/progressbar_horizontal"
        android:layout_width="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_height="3dp"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>