<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/default_padding"
                android:paddingLeft="@dimen/default_padding"
                android:background="@color/white"
              android:paddingTop="@dimen/default_padding">


    <ImageView
        android:scaleType="center"
        android:id="@+id/iv_music_item_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:padding="@dimen/default_padding"
        android:src="@drawable/list_icn_move"/>

    <TextView
        android:id="@+id/tv_music_item_time"
        style="@style/MusicItemTitleSinger"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/iv_music_item_options"
        android:text="4:55"/>

    <TextView
        android:transitionName="@string/start_anim_title"
        android:id="@+id/tv_music_item_title"
        android:layout_alignParentLeft="true"
        style="@style/MusicItemTitleText"
        android:layout_toLeftOf="@+id/tv_music_item_time"
        android:text="@string/app_name"/>

    <TextView
        android:transitionName="@string/start_anim_singer"
        android:id="@+id/tv_music_item_singer"
        android:layout_alignParentLeft="true"
        style="@style/MusicItemTitleSinger"
        android:layout_below="@+id/tv_music_item_title"
        android:layout_marginTop="@dimen/music_item_margin"
        android:layout_toLeftOf="@+id/tv_music_item_time"
        android:text="@string/app_name"/>

</RelativeLayout>